Summarise Changes

3.0.2
#355:When write to Wav LIST fields need to write as IS0-8859-1 not UTF-8
#655:Issue writing to Wav file because INFO chunk has invalid field and this prevents reading of subsequent data chunk
#656:Add support for CREDITS,URL_BANDCAMP_ARTIST_SITE and URL_BANDCAMP_RELEASE_SITE

3.0.1
#039:Fixes required due to PR69 changes to AbstractID3v2Tag.getFrame() so that it now always returns list

3.0.0
#073:Support for writing DSF files
#084:Add method to copy metadata from Info tag to ID3 tag within a Wav
#085:AbstractID3v2Tag.getSize() not handling aggregate frames
#086:Ensure write extra byte after writing ID3Tag if chunk is not even size
#087:Write extra byte after writing ID3Chunk in AIff Files if chunksize is odd
#089:Aiff has unnecessary getAudioHeading() when we already have getEncodingType()
#090:AiffTagWriter doesn't always work if replace the existing ID3tag rather than modifying
#091:WavTagWriter doesn't always work if replace the existing ID3tag rather than modifying
#092:Useful to have interface for enclosing tags that support ID3
#093:Unable to correctly write new ID3chunk if existing corrupt chunk
#094:AiffTagWriter not handling when existing ID3chunk of odd size at end of file
#096:Aiff DeleteTag not taking into account padding byte when chunk is not last chunk
#097:Wav writer needs to consider odd numbered chunk sizes better when writing
#098:Force ID3Tag within Aiff to be written as of size not odd
#099:When have ID3 tag in Aiff or Wav padding should be included in ID3header
#101:Force Wav ID3 Tag to be even sized
#103:Aiff do not rewrite header unless size has changed
#112:Mp4TagWriter.writeDataInChunks() always assuming there will be partial chunk to write
#117:OggWriter, if has to rewrite all pages and encounters a ID3v1tag at end of file it is discarded
#116:Check that APIC frame actually has image data before trying to get image data length.
#118:AudioFile.createDefaultTag() is broken, compares e.g. "flac" to ".flac"